----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-03-05 Robin Johnson  <robbat2@users.sourceforge.net>
    * Documentation.html, Documentation.txt: Long-withstanding spelling fixes!
    * updatedocs.sh: Script to make conversion easier

2003-03-05 Garvin Hicking <me@supergarv.de>
    * libraries/relation.lib.php3, libraries/transformations.lib.php3,
      tbl_relation.php3, tbl_move_copy.php3: Replace PMA_handleSlashes() 
      call with PMA_sqlAddslashes() call because of new global s
      lashes-handling.
    * sql.php3: Fixed querytime bug, when query was only shown for PHP
      display.
    * read_dump.php3, sql.php3, tbl_alter.php3,
      tbl_properties_export.php3: Fixed remaining calls to stripslashes() 
      where not neccessary, because grab_globals already stripslashed 
      the data. This fixes the problem of the SQL Pretty printer showing 
      the data wrongly formatted.
      
2003-03-05 Michal Cihar  <nijel@users.sourceforge.net>
    * libraries/sqlparser.data.php3: TRANSACTION isn't reserved word (fixes
     #697961)

2003-03-05 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html, faq 1.29 about the "duplicate field names" problem
    * transformation_wrapper.php3, libraries/defines_php.lib.php3,
      libraries/transformations/image_jpeg__inline.inc.php3:
      resized thumbnails

2003-03-03 Alexander M. Turek  <rabus@users.sourceforge.net>
    * tbl_replace_fields.php3: Bugfix: User was unable to insert values
      containing quotes.
    * libraries/common.lib.php3:
      - Avoid reloading the left frame twice;
      - PHP3 compatibility;
      - $cfg['PmaAbsoluteUri'] autodetection did not work as expected if php was
        in CGI mode.

2003-03-03 Marc Delisle  <lem9@users.sourceforge.net>
    * badwords.txt: bug 692874: "date" is not a reserved word

2003-03-02 Alexander M. Turek  <rabus@users.sourceforge.net>